# api_guard

./: .gitignore  .gitmodules  .jules  AGENTS.md  ARCHITECTURE.md  OLLAMA_MCP_SETUP.md  README.md  mcp-config.json  mvnw.cmd  pom.xml  server.py  test_mcp.py
cli/api_guard/: CMakeLists.txt  CmakeLists.txt  NOTICE  main.cpp  vcpkg.json
cli/api_guard/dependency_scanner/: dependency_scanner.cpp  dependency_scanner.h
cli/api_guard/models/: Consumer.h  DataHub.h  Link.h  Producer.h
cli/api_guard/process_handler/: process_handler.cpp  process_handler.h
cli/experiments/: main.py
dependency_analyzers/java/: pom.xml
dependency_analyzers/java/api_guard/: CONTRIBUTING.md  dependency-reduced-pom.xml  mvnw  pom.xml  smartgraph.css  smartgraph.properties
dependency_analyzers/java/api_guard/src/main/java/: module-info.java
dependency_analyzers/java/api_guard/src/main/java/org/mindpower/api_guard/: AnalysisController.java  (+2 more)
react-ollama-client/: index.html  package-lock.json  package.json  vite.config.js
react-ollama-client/src/: App.css  App.jsx  App.test.jsx
react-ollama-client/src/api/: ollama.js
react-ollama-client/src/components/: ChatHeader.jsx  MessageInput.jsx  MessageList.jsx  Sidebar.css  Sidebar.jsx
react-ollama-client/src/hooks/: useChat.js  useConversations.js  useModels.js
react-ollama-client/src/models/: chat.js
react-ollama-client/tests/: chat.spec.js
src/main/java/: module-info.java
src/main/java/org/example/micro_service_map/: AnalysisController.java  ApiGuardApplication.java
src/main/java/org/example/micro_service_map/models/: Consumer.java  DataHub.java  Endpoint.java  Producer.java  RestClient.java
src/main/java/org/mindpower/api_guard/: AnalysisController.java  ApiGuardApplication.java
src/main/java/org/mindpower/api_guard/models/: Consumer.java  DataHub.java  Endpoint.java  Producer.java  RestClient.java
src/main/resources/org/example/micro_service_map/: analysis-view.fxml
src/main/resources/org/mindpower/api_guard/: analysis-view.fxml
tests/: test_cli.py
(+20 files in other folders)
